--- a/templates/regles.html
+++ b/templates/regles.html
@@ -8,20 +8,23 @@
 <body>
     <form method="POST">
         <label for="predateur">stats des prédateur :</label><br><br>
-        <input type="text" id="nb_bebe_predateur" name="nb_bebe_predateur"  placeholder="reproduction des prédateur" required><br>
-        <input type="text" id="nb_bebe_tout_les_preda" name="nb_bebe_tout_les_preda"  placeholder="tout les combiens de jour ils se reproduise" required><br>
-        <input type="text" id="nb_de_nourriture_predateur" name="nb_de_nourriture_predateur"  placeholder="ils mangent combiens ?" required><br>
-        <input type="text" id="nb_de_nourriture_tout_les_predateur" name="nb_de_nourriture_tout_les_predateur"  placeholder="ils mangent tout les combiens ?" required><br>
+        <input type="number" id="nb_bebe_predateur1" name="nb_bebe_predateur1"  placeholder="reproduction des prédateu entre :r" required><br>
+        <input type="number" id="nb_bebe_predateur2" name="nb_bebe_predateur2"  placeholder="reproduction des prédateur et " required><br>
+        <input type="number" id="nb_bebe_tout_les_preda" name="nb_bebe_tout_les_preda"  placeholder="tout les combiens de jour ils se reproduise" required><br>
+        <input type="number" id="nb_de_nourriture_predateur" name="nb_de_nourriture_predateur"  placeholder="ils mangent combiens ?" required><br>
+        <input type="number" id="nb_de_nourriture_tout_les_predateur" name="nb_de_nourriture_tout_les_predateur"  placeholder="ils mangent tout les combiens ?" required><br>
 
         <label for="proie">stats des proie :</label><br><br>
-        <input type="text" id="nb_bebe_proie" name="nb_bebe_proie"  placeholder="reproduction des proie" required><br>
-        <input type="text" id="nb_bebe_tout_les_proie" name="nb_bebe_tout_les_proie"  placeholder="tout les combiens de jour ils se reproduise" required><br>
-        <input type="text" id="nb_de_nourriture_proie" name="nb_de_nourriture_proie"  placeholder="ils mangent combiens ?" required><br>
-        <input type="text" id="nb_de_nourriture_tout_les_proie" name="nb_de_nourriture_tout_les_proie"  placeholder="ils mangent tout les combiens ?" required><br>
+        <input type="number" id="nb_bebe_proie1" name="nb_bebe_proie1"  placeholder="reproduction des proie entre :" required><br>
+        <input type="number" id="nb_bebe_proie2" name="nb_bebe_proie2"  placeholder="reproduction des proie et :" required><br>
+        <input type="number" id="nb_bebe_tout_les_proie" name="nb_bebe_tout_les_proie"  placeholder="tout les combiens de jour ils se reproduise" required><br>
+        <input type="number" id="nb_de_nourriture_proie" name="nb_de_nourriture_proie"  placeholder="ils mangent combiens ?" required><br>
+        <input type="number" id="nb_de_nourriture_tout_les_proie" name="nb_de_nourriture_tout_les_proie"  placeholder="ils mangent tout les combiens ?" required><br>
 
                 <label for="proie">stats des végétaux :</label><br><br>
-        <input type="text" id="nb_bebe_vegetal" name="nb_bebe_vegetal"  placeholder="reproduction des vetegaux" required><br>
-        <input type="text" id="nb_bebe_tout_les_vegetal" name="nb_bebe_tout_les_vegetal"  placeholder="tout les combiens de jour ils se reproduise" required><br>
+        <input type="number" id="nb_bebe_vegetal1" name="nb_bebe_vegetal1"  placeholder="reproduction des vetegaux entre :" required><br>
+        <input type="number" id="nb_bebe_vegetal2" name="nb_bebe_vegetal2"  placeholder="reproduction des vetegaux et :" required><br>
+        <input type="number" id="nb_bebe_tout_les_vegetal" name="nb_bebe_tout_les_vegetal"  placeholder="tout les combiens de jour ils se reproduise" required><br>
     
     <input type="submit" value="Envoyer">
     </form>
