Modification pour utiliser la route 'modifier'

--- a/templates/regles.html
+++ b/templates/regles.html
@@ -25,8 +25,7 @@
         <input type="number" id="nb_bebe_vegetal1" name="nb_bebe_vegetal1"  placeholder="reproduction des vetegaux entre :" required><br>
         <input type="number" id="nb_bebe_vegetal2" name="nb_bebe_vegetal2"  placeholder="reproduction des vetegaux et :" required><br>
         <input type="number" id="nb_bebe_tout_les_vegetal" name="nb_bebe_tout_les_vegetal"  placeholder="tout les combiens de jour ils se reproduise" required><br>
-    
-    <input type="submit" value="Envoyer">
     </form>
+    <a href="/modifier">Sauvegarder</a>
 </body>
 </html>
