--- a/templates/init.html
+++ b/templates/init.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World</title>
+    <title>Init</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
 </head>
 <body>
-    test
+
+<p>Initialisation :</p>
+
+<div>
+  <input type="range" id="loup" min="0" max="50" value="90" step="1">
+  <label for="loup">
+    Loup : <span id="qloup"></span>
+  </label>
+</div>
+
+<div>
+  <input type="range" id="mouton" min="0" max="50" value="90" step="1">
+  <label for="mouton">
+    Mouton : <span id="qmouton"></span>
+  </label>
+</div>
+
+<div>
+  <input type="range" id="herbe" min="0" max="50" value="90" step="1">
+  <label for="herbe">
+    Herbe : <span id="qherbe"></span>
+  </label>
+</div>
+
+<a href="/game"><button>Continuer</button></a>
+<script src="{{url_for('static',filename='app.js')}}"></script>
+
 </body>
 </html>
+
