--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,9 @@
     <title>index</title>
 </head>
 <body>
-    <a href="/world">Jouer</a>
+    <a href="/init">Jouer</a>
     <h2>règles:</h2>
     <a href="/regles">regle</a>
 </body>
 </html>
+
