--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
-    <a href="/init">Jouer</a>
-    <h2>règles:</h2>
-    <a href="/regles">regle</a>
+
+    <div class="container">
+        <a href="/init"><button>Jouer</button></a>
+        <a href="/regles"><button>Règles</button></a>
+        <a href="/credit"><button>Crédit</button></a>
+    </div>
+
 </body>
 </html>
-
