Modify supprimer.html for script source and structure
Updated the script source in the form and ensured proper HTML structure.

--- a/templates/supprimer.html
+++ b/templates/supprimer.html
@@ -35,8 +35,9 @@
     <button type="submit">Continuer</button>
     
   </form>
-<script src="{{url_for('static',filename='app.js')}}"></script>
+<script src="{{url_for('static',filename='update.js')}}"></script>
 
 </body>
 </html>
+
 
