--- a/templates/ajouter.html
+++ b/templates/ajouter.html
@@ -35,8 +35,9 @@
     <button type="submit">Continuer</button>
     
   </form>
-<script src="{{url_for('static',filename='app.js')}}"></script>
+<script src="{{url_for('static',filename='update.js')}}"></script>
 
 </body>
 </html>
+
 
