--- a/templates/game.html
+++ b/templates/game.html
@@ -23,11 +23,11 @@
     {% if afficher_bouton %}
         <h2>Anomalie détécté durant les prochains jours !!!</h2><br>
         <form action="/ajouter" method="POST">
+            <input type="hidden" name="jour" value="{{jour}}">
+            <input type="hidden" name="loup" value="{{predateur}}">
+            <input type="hidden" name="mouton" value="{{proie}}">
+            <input type="hidden" name="herbe" value="{{vegetal}}">
             <button type="submit">Ajouter</button>
-        </form>
-        <br>
-        <form action="/supprimer" method="POST">
-            <button type="submit">Supprimer</button>
         </form>
     {% endif %}
     <a href="/">retour</a>
