--- a/templates/regles.html
+++ b/templates/regles.html
@@ -8,22 +8,98 @@
 <body>
     <form method="POST" action="/modifier">
         <label for="predateur"><h2>stats des prédateur :</h2></label>
-        <label for="predateur">Les prédateurs ce reproduise entre : <input type="number" id="nb_bebe_predateur1" name="nb_bebe_predateur1"  placeholder=" " required> et : <input type="number" id="nb_bebe_predateur2" name="nb_bebe_predateur2"  placeholder=" " required>.</label><br><br>
-        <label for="predateur">Les prédateurs ce reproduise tout les combiens de jour ? <input type="number" id="nb_bebe_tout_les_preda" name="nb_bebe_tout_les_preda"  placeholder=" " required></label><br><br>
-        <label for="predateur">Les prédateurs mange combien de prois ? <input type="number" id="nb_de_nourriture_predateur" name="nb_de_nourriture_predateur"  placeholder=" " required></label><br><br>
-        <label for="predateur">Les prédateurs mange tout les combien de jour ? <input type="number" id="nb_de_nourriture_tout_les_predateur" name="nb_de_nourriture_tout_les_predateur"  placeholder=" " required></label><br>
+        <label for="predateur">
+            Les prédateurs ce reproduise entre : 
+            <input  type="number"
+                    id="nb_bebe_predateur1" 
+                    name="nb_bebe_predateur1" 
+                    class="min" required> 
+            et :  
+            <input  type="number" 
+                    id="nb_bebe_predateur2"
+                    name="nb_bebe_predateur2" 
+                    class="max" disabled>
+        </label><br><br>
+        <label for="predateur">
+            Les prédateurs ce reproduise entre :
+            <input  type="number"
+                    id="nb_bebe_tout_les_preda" 
+                    name="nb_bebe_tout_les_preda"  
+                    placeholder=" " required> 
+            jour, et : 
+            <input  type="number"
+                    id="nb_bebe_tout_les_preda2" 
+                    name="nb_bebe_tout_les_preda2"  
+                    placeholder=" " 
+                    disabled>
+            jour
+        </label><br><br>
+
+
+        <label for="predateur">
+            Les prédateurs mange combien de prois ? 
+            <input  type="number" 
+                    id="nb_de_nourriture_predateur" 
+                    name="nb_de_nourriture_predateur"  
+                    placeholder=" " 
+                    required>
+        </label><br><br>
+
+
+        <label for="predateur">
+            Les prédateurs mange tout les combien de jour ?
+            <input  type="number" 
+                    id="nb_de_nourriture_tout_les_predateur" 
+                    name="nb_de_nourriture_tout_les_predateur"  
+                    placeholder=" " 
+                    required>
+        </label><br>
+
+
+
         <label for="proie"><h2>stats des proie :</h2></label>
-        <label for="proie">Les proies ce reproduise entre :<input type="number" id="nb_bebe_proie1" name="nb_bebe_proie1"  placeholder=" " required> et : <input type="number" id="nb_bebe_proie2" name="nb_bebe_proie2"  placeholder=" " required></label><br><br>
-        <label for="proie">Les proies ce reproduise tout les combiens de jour ? <input type="number" id="nb_bebe_tout_les_proie" name="nb_bebe_tout_les_proie"  placeholder="" required></label><br><br>
+
+        <label for="proie">Les proies ce reproduise entre :
+            <input  type="number" 
+                    id="nb_bebe_proie1" 
+                    name="nb_bebe_proie1"  
+                    placeholder=" " 
+                    class="min"
+                    required>
+                et : 
+            <input  type="number" 
+                    id="nb_bebe_proie2" 
+                    name="nb_bebe_proie2"  
+                    placeholder=" "
+                    class="max"
+                    disabled>
+            </label><br><br>
+
+        <label for="proie">
+            Les proies ce reproduise entre : 
+            <input  type="number" 
+                    id="nb_bebe_tout_les_proie" 
+                    name="nb_bebe_tout_les_proie"  
+                    placeholder="" 
+                    required> 
+                jour et : 
+            <input  type="number" 
+                    id="nb_bebe_tout_les_proie2" 
+                    name="nb_bebe_tout_les_proie2"  
+                    placeholder="" 
+                    disabled>
+        </label><br><br>
+        
         <label for="proie">Les proies mange combien de végétaux ? <input type="number" id="nb_de_nourriture_proie" name="nb_de_nourriture_proie"  placeholder=" " required></label><br><br>
         <label for="proie">Les proies mange tout les combien de jour ? <input type="number" id="nb_de_nourriture_tout_les_proie" name="nb_de_nourriture_tout_les_proie"  placeholder=" " required></label><br>
-                <label for="proie"><h2>stats des végétaux :</h2></label>
+
+        <label for="proie"><h2>stats des végétaux :</h2></label>
         <label for="vegetal">Les végétaux ce reproduise entre : <input type="number" id="nb_bebe_vegetal1" name="nb_bebe_vegetal1"  placeholder=" " required> et : <input type="number" id="nb_bebe_vegetal2" name="nb_bebe_vegetal2"  placeholder=" " required></label><br><br>
-        <label for="vegetal">Les végétaux ce reproduise tout les combiens de jour ? <input type="number" id="nb_bebe_tout_les_vegetal" name="nb_bebe_tout_les_vegetal"  placeholder=" " required></label><br>
+        <label for="vegetal">Les végétaux ce reproduise entre : <input type="number" id="nb_bebe_tout_les_vegetal" name="nb_bebe_tout_les_vegetal"  placeholder=" " required> jour et : <input type="number" id="nb_bebe_tout_les_vegetal2" name="nb_bebe_tout_les_vegetal2"  placeholder=" " required></label><br>
     
         <button type="submit">Sauvegarder</button>
     </form>
     <a href="/">retour</a>
-    
+    <script src="{{url_for('static', filename='regle.js')}}"></script>
 </body>
 </html>
