--- a/static/style.css
+++ b/static/style.css
@@ -43,3 +43,19 @@ button {
         bottom: 100%;
     }
 }
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#video-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    z-index: -10;
+}
