--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <video id="video-bg" autoplay muted loop playsinline>
+        <source src="{{ url_for('static', filename='fond_index.mp4') }}" type="video/mp4">
+    </video>
+
     <div class="container">
         <a href="/init"><button>Jouer</button></a>
         <a href="/regles"><button>Règles</button></a>
@@ -16,4 +20,5 @@
     </div>
 
 </body>
+
 </html>
