--- a/templates/init.html
+++ b/templates/init.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
 </head>
 <body>
+
+  <video id="video-bg" autoplay muted loop playsinline>
+        <source src="{{ url_for('static', filename='fond_index.mp4') }}" type="video/mp4">
+  </video>
+
   <form action="/game" method="POST">
     <p>Initialisation :</p>
     
