--- a/templates/ajouter.html
+++ b/templates/ajouter.html
@@ -16,22 +16,22 @@
     <p>Ajouter :</p>
     
     <div>
-      <input type="range" id="loup" name="loup" min="0" max="20" value="0" step="1">
-      <label for="loup">
+      <input type="range" id="loup" name="loup" min="0" max="20" value="0" step="1" class="customrangerouge">
+      <label for="loup" style="color: rgb(255, 0, 0);">
         Ajouter Loup : <span id="qloup"></span>
       </label>
     </div>
 
     <div>
-      <input type="range" id="mouton" name="mouton" min="0" max="20" value="0" step="1">
-      <label for="mouton">
+      <input type="range" id="mouton" name="mouton" min="0" max="20" value="0" step="1"class="customrangebleu">
+      <label for="mouton" style="color: rgb(0, 0, 255);">
         Ajouter Mouton : <span id="qmouton"></span>
       </label>
     </div>
 
     <div>
-      <input type="range" id="herbe" name="herbe" min="0" max="20" value="0" step="1">
-      <label for="herbe">
+      <input type="range" id="herbe" name="herbe" min="0" max="20" value="0" step="1"class="customrangevert">
+      <label for="herbe" style="color: rgb(0, 255, 0);">
         Ajouter Herbe : <span id="qherbe"></span>
       </label>
     </div>
