--- a/templates/init.html
+++ b/templates/init.html
@@ -17,22 +17,22 @@
     <h1>Initialisation :</h1>
     
     <div>
-      <input type="range" id="loup" name="loup" min="0" max="50" value="90" step="1">
-      <label for="loup">
+      <input type="range" id="loup" name="loup" min="0" max="50" value="90" step="1"class="customrangerouge">
+      <label for="loup" style="color: rgb(255, 0, 0);">
         Loup : <span id="qloup"></span>
       </label>
     </div>
 
     <div>
-      <input type="range" id="mouton" name="mouton" min="0" max="500" value="90" step="1" style="background-color: blue;">
-      <label for="mouton">
+      <input type="range" id="mouton" name="mouton" min="0" max="500" value="90" step="1" style="background-color: blue;"class="customrangebleu">
+      <label for="mouton" style="color: rgb(0, 0, 255);">
         Mouton : <span id="qmouton"></span>
       </label>
     </div>
 
     <div>
-      <input type="range" id="herbe" name="herbe" min="0" max="1000" value="90" step="1">
-      <label for="herbe">
+      <input type="range" id="herbe" name="herbe" min="0" max="1000" value="90" step="1"class="customrangevert">
+      <label for="herbe" style="color: rgb(0, 255, 38);">
         Herbe : <span id="qherbe"></span>
       </label>
     </div>
