Update predator and prey statistics in regles.html

--- a/templates/regles.html
+++ b/templates/regles.html
@@ -8,9 +8,9 @@
 <body>
 
     <form method="POST" action="/modifier">
-        <label for="predateur"><h2>stats des prédateur :</h2></label>
+        <label for="predateur"><h2>stats des loups :</h2></label>
         <label for="predateur">
-            Les prédateurs ce reproduise entre : 
+            Une portée de loups donne entre : 
             <input  type="number"
                     id="nb_bebe_predateur1" 
                     name="nb_bebe_predateur1" 
@@ -20,9 +20,10 @@
                     id="nb_bebe_predateur2"
                     name="nb_bebe_predateur2" 
                     class="max" disabled>
+            louveteau
         </label><br><br>
         <label for="predateur">
-            Les prédateurs ce reproduise entre :
+            La gestation dure entre :
             <input  type="number"
                     id="nb_bebe_tout_les_preda" 
                     name="nb_bebe_tout_les_preda"  
@@ -38,7 +39,7 @@
 
 
         <label for="predateur">
-            Les prédateurs mange combien de prois ? 
+            Les loups mange combien de prois ? 
             <input  type="number" 
                     id="nb_de_nourriture_predateur" 
                     name="nb_de_nourriture_predateur"  
@@ -48,7 +49,7 @@
 
 
         <label for="predateur">
-            Les prédateurs mange tout les combien de jour ?
+            Les loups mange tout les combien de jour ?
             <input  type="number" 
                     id="nb_de_nourriture_tout_les_predateur" 
                     name="nb_de_nourriture_tout_les_predateur"  
@@ -58,9 +59,10 @@
 
 
 
-        <label for="proie"><h2>stats des proie :</h2></label>
+        <label for="proie"><h2>stats des cerfs :</h2></label>
 
-        <label for="proie">Les proies ce reproduise entre :
+        <label for="proie">
+            Une portée de cerfs donne entre :
             <input  type="number" 
                     id="nb_bebe_proie1" 
                     name="nb_bebe_proie1"  
@@ -74,10 +76,11 @@
                     placeholder=" "
                     class="max"
                     disabled>
+                faon
         </label><br><br>
 
         <label for="proie">
-            Les proies ce reproduise entre : 
+            La gestation dure entre : 
             <input  type="number" 
                     id="nb_bebe_tout_les_proie" 
                     name="nb_bebe_tout_les_proie"  
@@ -92,7 +95,7 @@
         </label><br><br>
 
         <label for="proie">
-            Les proies mange combien de végétaux ? 
+            Les cerfs mange combien de herbes ? 
             <input  type="number" 
                     id="nb_de_nourriture_proie" 
                     name="nb_de_nourriture_proie"  
@@ -100,7 +103,7 @@
         </label><br><br>
 
         <label for="proie">
-            Les proies mange tout les combien de jour ? 
+            Les cerfs mange tout les combien de jour ? 
             <input  type="number" 
                     id="nb_de_nourriture_tout_les_proie" 
                     name="nb_de_nourriture_tout_les_proie"  
@@ -108,9 +111,9 @@
                     required>
         </label><br>
 
-        <label for="proie"><h2>stats des végétaux :</h2></label>
+        <label for="proie"><h2>stats des herbes :</h2></label>
         <label for="vegetal">
-            Les végétaux ce reproduise entre : 
+            Le taux de croissance de l'herbe entre : 
             <input  type="number" 
                     id="nb_bebe_vegetal1" 
                     name="nb_bebe_vegetal1"  
@@ -127,7 +130,7 @@
         </label><br><br>
 
         <label for="vegetal">
-            Les végétaux ce reproduise entre : 
+            Les herbes ce reproduise entre : 
             <input  type="number" 
                     id="nb_bebe_tout_les_vegetal" 
                     name="nb_bebe_tout_les_vegetal"  
