Update button link from 'Règles' to 'Paramètre'

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,11 @@
 
     <div class="container">
         <a href="/init"><button>Jouer</button></a>
-        <a href="/regles"><button>Règles</button></a>
+        <a href="/parametre"><button>Paramètre</button></a>
         <a href="/credit"><button>Crédit</button></a>
     </div>
 
 </body>
 
 </html>
+
