--- a/templates/game.html
+++ b/templates/game.html
@@ -10,7 +10,7 @@
     <form action="/game" method="POST">
         <input type="hidden" name="jour" value="{{jour}}">
         <input type="hidden" name="loup" value="{{predateur}}">
-        <input type="hidden" name="mouton" value="{{proie}}">
+        <input type="hidden" name="cerf" value="{{proie}}">
         <input type="hidden" name="herbe" value="{{vegetal}}">
 
         <a>Jour n° : {{jour}}</a><br>
@@ -33,7 +33,7 @@
         <form action="/ajouter" method="POST">
             <input type="hidden" name="jour" value="{{jour}}">
             <input type="hidden" name="loup" value="{{predateur}}">
-            <input type="hidden" name="mouton" value="{{proie}}">
+            <input type="hidden" name="cerf" value="{{proie}}">
             <input type="hidden" name="herbe" value="{{vegetal}}">
             <button type="submit">Ajouter</button>
         </form>
