--- a/templates/init.html
+++ b/templates/init.html
@@ -24,9 +24,9 @@
     </div>
 
     <div>
-      <input type="range" id="mouton" name="mouton" min="0" max="500" value="90" step="1" style="background-color: blue;"class="customrangebleu">
-      <label for="mouton" style="color: rgb(0, 0, 255);">
-        Mouton : <span id="qmouton"></span>
+      <input type="range" id="cerf" name="cerf" min="0" max="500" value="90" step="1" style="background-color: blue;"class="customrangebleu">
+      <label for="cerf" style="color: rgb(0, 0, 255);">
+        cerf : <span id="qcerf"></span>
       </label>
     </div>
 
