--- a/templates/ajouter.html
+++ b/templates/ajouter.html
@@ -23,9 +23,9 @@
     </div>
 
     <div>
-      <input type="range" id="mouton" name="mouton" min="0" max="20" value="0" step="1"class="customrangebleu">
-      <label for="mouton" style="color: rgb(0, 0, 255);">
-        Ajouter Mouton : <span id="qmouton"></span>
+      <input type="range" id="cerf" name="cerf" min="0" max="20" value="0" step="1"class="customrangebleu">
+      <label for="cerf" style="color: rgb(0, 0, 255);">
+        Ajouter cerf : <span id="qcerf"></span>
       </label>
     </div>
 
@@ -38,7 +38,7 @@
 
     <input type="hidden" name="base_jour" value="{{jour}}">
     <input type="hidden" name="base_loup" value="{{predateur}}">
-    <input type="hidden" name="base_mouton" value="{{proie}}">
+    <input type="hidden" name="base_cerf" value="{{proie}}">
     <input type="hidden" name="base_herbe" value="{{vegetal}}">
 
     <button type="submit">Jour suivant</button>
