--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,17 @@
     <video id="video-bg" autoplay muted loop playsinline>
         <source src="{{ url_for('static', filename='fond_index.mp4') }}" type="video/mp4">
     </video>
+    
+     <center>
+    <img 
+    src="{{ url_for('static', filename='Ecologic.png') }}" 
+    alt="Logo" 
+    width="200"
+    height="250"
+    align="middle" 
+    valign="top"
+    />
+    </center>
 
     <div class="container">
         <a href="/init"><button>Jouer</button></a>
@@ -22,4 +33,5 @@
 </body>
 
 </html>
+
 
