Refactor index.html structure and update links

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,8 @@
     </center>
 
     <div class="container">
-        <a href="/init"><button>Jouer</button></a>
-        <a href="/parametre"><button>Paramètre</button></a>
-        <a href="/credit"><button>Crédit</button></a>
+        <a class="jouer" href="/init"><button>Jouer</button></a>
+        <a class="parametre" href="/parametre"><button>Paramètre</button> </a>
     </div>
 
 </body>
