--- a/static/style.css
+++ b/static/style.css
@@ -14,8 +14,12 @@ body {
 
 button {
     padding: 12px 30px;
-    font-size: 20px;
+    font-size: 40px;
     cursor: pointer;
+    border-radius: 30px;
+    block-size: 75px;
+    border: 50px;
+    margin-bottom: 200px;
 }
 
 
